# studio_summit_2026_game

./: .gitignore  CMakeLists.txt  Makefile  README.md  the_rogue_battle  todo.md  vcpkg.json
.github/workflows/: ci.yml  main.yml
SDK/: Makefile
SDK/include/: apu.h  core.h  platform.h  vcp.h  vec.h  vpu.h
SDK/src/: apu.c  mat3_neon.c  mat4_neon.c  platform.c  quat_neon.c  util_neon.c  vcp.c  vec3_neon.c  vec4_neon.c  vpu.c
Sounds/: background_sound.h  possible_sounds.txt
images/: _csv_gen.py  image_to_palette_csv.py  image_to_palette_magick.py  image_to_palette_png.py  pixelart.bat
images/generated_images/: promp_font.txt  prompt_texts.txt
images/input/letters/: letters.xcf
images/output/: Background.csv  Bullet.csv  Enemy.csv  palette_colors.txt  player.csv  sprites.txt
images/scaled_images/: composition.xcf
src/: Alpha.cpp  Alpha.h  AlphaManager.cpp  AlphaManager.h  BattleState.cpp  BattleState.h  Bullet.cpp  Bullet.h  ButtonA.cpp  ButtonA.h  Ease.cpp  Ease.h  EasingManager.cpp  EasingManager.h  EndGameState.cpp  EndGameState.h  Explosion.h  Firework.cpp  Firework.h  GameConfig.h  GameManager.cpp  GameManager.h  HighScoreState.cpp  HighScoreState.h  ImprovementSelectionState.cpp  ImprovementSelectionState.h  InitialMovementState.cpp  InitialMovementState.h  InputManager.cpp  InputManager.h  LinuxPainter.cpp  LinuxPainter.h  Main.cpp  MainMenuState.cpp  MainMenuState.h  Meteorite.h  NumberManager.cpp  NumberManager.h  Painter.cpp  Painter.h  (+28 more)
src/config/: BattleStateConfig.h  CoordsConfig.h  DefaultValuesConfig.h  EnemyConfiguration.h  FireworkConfig.h  ImprovementsConfig.h  LevelConfiguration.h  MainMenuConfig.h  MeteoritesConfiguration.h  PoolConfig.h  ScoreConfiguration.h  ScreenConfig.h  StarsConfiguration.h  TimesConfig.h
